# be

./: .gitignore  Djnago-Manual.md  README.md  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  q  requirements.txt
app/: admin.py  models.py  serializers.py  urls.py  views.py
app/additional_models/: __init__.py  comp_uni_feedback.py  uni_stu_feedback.py
app/api/: permissions.py  serializers.py  views.py
app/migrations/: 0001_initial.py  0002_appuser_is_company_alter_appuser_is_active_and_more.py  0002_delete_company_delete_student_and_more.py  0002_rating_studentreport_accepted_studentreport_remarks_and_more.py  0002_studentreport_accepted_studentreport_remarks_and_more.py  0002_unistufeedback.py  0003_appuser_gpa_appuser_major_alter_appuser_username.py  0003_attendance.py  0003_compunifeedback.py  0003_postinternship.py  0003_rating_company_name_rating_recomended_rating_student_and_more.py  0003_studentexperience.py  0003_studentproposal.py  0004_alter_studentproposal_student_number.py  0004_compunifeedback_type.py  0004_rating_comments.py  0004_remove_postinternship_num_of_applications_and_more.py  0004_studentexperience_timestamp_and_more.py  0005_alter_compunifeedback_type.py  0005_postinternship_city_alter_postinternship_last_date_and_more.py  0005_student_company_proposal_delete_studentproposal.py  0005_studentapplications.py  0006_appuser_slug.py  0006_rename_min_requirements_postinternship_minimum_requirements.py  0006_rename_name_studentapplications_full_name_and_more.py  (+12 more)
tadreebi/: .env.sample  asgi.py  settings.py  urls.py  wsgi.py
(+127 files in other folders)
