[tool.poetry]
name = "tadreebi"
version = "0.1.0"
description = ""
authors = ["makkahwi <suhaibahmadai@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
django-filter = "^22.1"
djangorestframework = "^3.13.1"
Markdown = "^3.3.7"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^6.3.0"}
djangorestframework-simplejwt = "^5.2.0"
django-location-field = "^2.1.0"
Pillow = "^9.1.1"
drf-yasg = {extras = ["validation"], version = "^1.20.0"}
python-dotenv = "^0.20.0"
django-cors-headers = "^3.13.0"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
